ViewGroup学习的初步入门，了解ViewGroup的定义步骤

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':downbox', ':studyview', ':progresscircle', ':switch'
+include ':app', ':downbox', ':studyview', ':progresscircle', ':switch', ':mygroupview'
