--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':downbox', ':studyview', ':progresscircle', ':switch', ':mygroupview'
+include ':app', ':downbox', ':studyview', ':progresscircle', ':switch', ':mygroupview', ':crossviewgroup'
