事件控制-dispatchtoucheven+onintercepttoucheven初步学习demo+scroll学习

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':downbox', ':studyview', ':progresscircle', ':switch', ':mygroupview', ':crossviewgroup'
+include ':app', ':downbox', ':studyview', ':progresscircle', ':switch', ':mygroupview', ':crossviewgroup', ':viewtouch', ':scroll'
